# eyetracking-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: .$Untitled Diagram.drawio.bkp  01-Planteamiento de Problematica.md  Untitled Diagram.drawio
docs/.obsidian/: workspace.json
include/: Camera.hpp  CameraManager.hpp  Eye.hpp  Face.hpp  GazePoint.hpp  Image.hpp
src/: Camera.cpp  Eye.cpp  Face.cpp  GazePoint.cpp  Image.cpp  main.cpp
